Delete unnes.files, fix bugs on ie, add new normlz

--- a/less/blocks/feature-description.less
+++ b/less/blocks/feature-description.less
@@ -73,6 +73,7 @@
 
   &::before {
     position: absolute;
+    left: 20px;
     bottom: 0;
     display: block;
     content: "";
