--- a/less/blocks/feedback-item.less
+++ b/less/blocks/feedback-item.less
@@ -6,7 +6,6 @@
 }
 
 .feedback-item__input {
-  width: 100%;
   margin-bottom: 20px;
   padding: 0;
   padding-left: 18px;
@@ -81,8 +80,19 @@
 .feedback-item--name {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  width: 280px;
+  justify-content: space-between;
+}
+
+.feedback-item--name input[name="first-name"] {
+  width: 204px;
+}
+
+.feedback-item--name input[name="last-name"] {
+  width: 166px;
+}
+
+.feedback-item--name input[name="patronymic-name"] {
+  width: 168px;
 }
 
 .feedback-item--contacts {
@@ -331,6 +341,18 @@
     margin-bottom: 20px;
   }
 
+  .feedback-item--name input[name="first-name"] {
+    width: 189px;
+  }
+
+  .feedback-item--name input[name="last-name"] {
+    width: 152px;
+  }
+
+  .feedback-item--name input[name="patronymic-name"] {
+    width: 154px;
+  }
+
   .feedback-item--name .feedback-item__input {
     margin-bottom: 0;
   }
@@ -370,18 +392,34 @@
 @media @desktop-width {
 
   .feedback-item--name {
-    width: 100%;
+    display: block;
+    width: 480px;
     padding-left: 0;
   }
 
-  .feedback-item--name .feedback-item__input {
-    flex-grow: 7;
+  .feedback-item--name .feedback-item__label {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 80px;
+    padding-right: 9px;
+    text-align: left;
   }
 
-  .feedback-item--name .feedback-item__label {
-    flex-grow: 1;
-    margin-left: 80px;
-    text-align: left;
+  .feedback-item--name .feedback-item__input {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  .feedback-item--name input[name="first-name"] {
+    width: 324px;
+  }
+
+  .feedback-item--name input[name="last-name"] {
+    width: 286px;
+  }
+
+  .feedback-item--name input[name="patronymic-name"] {
+    width: 288px;
   }
 
   .feedback-item__radio-label {
