--- a/less/blocks/main-image.less
+++ b/less/blocks/main-image.less
@@ -31,7 +31,12 @@
   background-position: 50.2% 100%;
 }
 
+.main-image__caption {
+  height: 389px;
+}
+
 .main-image__caption--rest {
+  height: 158px;
   position: relative;
   top: -8px;
 }
