--- a/less/blocks/page-title.less
+++ b/less/blocks/page-title.less
@@ -7,6 +7,7 @@
 }
 
 .page-title__heading {
+  width: 256px;
   margin-top: 40px;
   margin-bottom: 25px;
   padding-left: 12px;
@@ -17,6 +18,7 @@
 }
 
 .page-title__caption {
+  width: 256px;
   margin-top: 0;
   margin-bottom: 30px;
   padding-left: 12px;
