--- a/less/blocks/page-wrapper.less
+++ b/less/blocks/page-wrapper.less
@@ -1,3 +1,9 @@
+@media @tablet-width {
+  .page-wrapper {
+    margin: 0 auto;
+  }
+}
+
 @media @desktop-width {
 .page-wrapper {
   .container();
