--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -1,5 +1,6 @@
 .video {
   position: relative;
+  width: 320px;
   margin-bottom: 25px;
   padding-bottom: 80px;
   text-align: center;
@@ -40,6 +41,7 @@
 @media @tablet-width {
 
   .video {
+    width: 648px;
     padding-bottom: 0;
     margin-bottom: 40px;
 
@@ -78,6 +80,7 @@
   .video {
     display: flex;
     flex-direction: column;
+    width: 800px;
     margin-bottom: 81px;
   }
 
